--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -1503,11 +1503,11 @@
     <q class="type">inclusion</q>
     </div>
   </div>
-  <div class="photocard rky switchon iso" data-category="mini">
+  <div class="photocard rky switchon owned" data-category="mini">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/switchon-8.png" />
     <div class="details">
     <q class="albumtitle">switch on</q>
-    <q class="status"> &cross; </q>
+        <q class="status"> &check; </q> <q class="status"> &#10148; </q>
     <q class="year">2021</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3046,17 +3046,29 @@
     <div class="details">
     <q class="albumtitle">AROHA 4</q>
     <q class="status">&check; </q>
-    <q class="year">2016</q>
+    <q class="year">2019</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
     <q class="type">etc</q>
   </div>  
   </div>
+    <div class="photocard rky binnie owned" data-category="etc">
+        <img src="/chikorakii/assets/pc/aroha4-binhyuk-1.png">
+        <div class="details">
+            <q class="albumtitle">AROHA 4</q>
+            <q class="status"> &check; </q>
+            <q class="status"> &#10148; </q>
+            <q class="year">2019</q>
+            <q class="group">astro</q>
+            <q class="member">rocky</q>
+            <q class="type">etc</q>
+    </div>
+    </div>
 <div class="photocard rky owned" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-aroha5-1.png">
     <div class="details">
     <q class="albumtitle">AROHA 5</q>
-      <q class="status">&check; </q> <q class="status">&#10148; </q>
+      <q class="status">&check; </q> 
     <q class="year">2021</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
