--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -35,7 +35,12 @@
   <button class="button2 billlie" data-filter=".tsuki"> tsuki</button>  
   <button class="button2 billlie" data-filter=".sheon"> sheon</button>  
   <button class="button2 billlie" data-filter=".siyoon"> siyoon</button>  
-  <button class="button2 billlie" data-filter=".haruna"> haruna</button>  
+  <button class="button2 billlie" data-filter=".haruna"> haruna</button>
+  <button class="button2"> &check; — owned </button>
+  <button class="button2"> &#10148; — otw </button>
+  <button class="button2"> &cross; — not owned </button>
+  <button class="button2"> &#9888; — priority </button>
+
 </div>
   </div>
   
@@ -394,7 +399,7 @@
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/dream2-4.png" />
     <div class="details">
     <q class="albumtitle">dream 02</q>
-    <q class="status">&check;</q><q class="status"> &#10148; </q>
+    <q class="status">&check;</q>
     <q class="year">2017</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
