--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -3533,6 +3533,29 @@
     <q class="type">etc</q>
   </div>  
   </div>
+    <div class="photocard rky owned" data-category="etc">
+        <img src="/chikorakii/assets/pc/kihno-1.png">
+        <div class="details">
+            <q class="albumtitle">Kihno</q>
+            <q class="status">&check;</q>
+            <q class="year">2018</q>
+            <q class="group">astro</q>
+            <q class="member">rocky</q>
+            <q class="type">etc</q>
+        </div>
+    </div>
+    <div class="photocard rky owned" data-category="etc">
+        <img src="/chikorakii/assets/pc/kihno-2.png">
+        <div class="details">
+            <q class="albumtitle">Kihno</q>
+            <q class="status">&check;</q>
+            <q class="year">2018</q>
+            <q class="group">astro</q>
+            <q class="member">rocky</q>
+            <q class="type">etc</q>
+        </div>
+    </div>
+    
 <div class="photocard rky owned" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-sg18-1.png">
     <div class="details">
