--- a/pages/collection-albums.html
+++ b/pages/collection-albums.html
@@ -18,7 +18,7 @@
         <button class="button" data-filter=".iso">iso / wtb</button>
         <button class="button" data-filter=".otw">in transit</button>
         <button class="button" data-filter=".astro">astro</button>
-        <button class="button" data-filter=".billlie">billlie</button>
+        <button class="button" data-filter=".bi">billlie</button>
         <button class="button" data-filter=".full">full album</button>
         <button class="button" data-filter=".mini">mini album</button>
         <button class="button" data-filter=".subunit">subunits</button>
@@ -175,15 +175,15 @@
             <h3 class="name">Winter Dream</h3>
         </div>
 
-                <div class="album billlie mini owned">
+                <div class="album bi mini owned">
                     <img src="/chikorakii/assets/tbop-art.jpeg">
             <h3 class="name">The Billlage of Perception</h3>
         </div>
-                            <div class="album billlie mini owned">
+                            <div class="album bi mini owned">
                                 <img src="/chikorakii/assets/tcsau1-soul.png">
             <h3 class="name">The Collective Soul and Unconscious — Soul </h3>
         </div>
-                            <div class="album billlie mini owned">
+                            <div class="album bi mini owned">
 <img src="/chikorakii/assets/tcsau1-uncon.png">
             <h3 class="name">The Collective Soul and Unconscious — Unconscious </h3>
         </div>
