--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -40,6 +40,7 @@
   <button class="button2"> &#10148; — otw </button>
   <button class="button2"> &cross; — not owned </button>
   <button class="button2"> &#9888; — priority </button>
+  <button class="button2"> &laquo; — dupe, willing to trade </button>
 
 </div>
   </div>
@@ -492,7 +493,7 @@
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/alllight-1.png" />
     <div class="details">
     <q class="albumtitle">all light</q>
-    <q class="status">&check;</q><q class="status"> &#10148; </q>
+    <q class="status">&check;</q>
     <q class="year">2019</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -547,7 +548,7 @@
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/alllight-6.png" />
     <div class="details">
     <q class="albumtitle">all light</q>
-    <q class="status">&check;</q><q class="status"> &#10148; </q>
+    <q class="status">&check;</q>
     <q class="year">2019</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -558,7 +559,7 @@
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/alllight-7.png" />
     <div class="details">
     <q class="albumtitle">all light</q>
-    <q class="status">&check;</q><q class="status"> &#10148; </q>
+    <q class="status">&check;</q><q class="status"> &laquo; </q>
     <q class="year">2019</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -1207,7 +1208,7 @@
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/allyours-makestar-1.png">
  <div class="details">
     <q class="albumtitle">all yours</q>
-    <q class="status">&check;</q>
+     <q class="status">&check;</q> <q class="status"> &laquo; </q>
     <q class="year">2021</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
