--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -3800,7 +3800,7 @@
   </div>  
   </div>
   
-<div class="photocard nunu owned wtt" data-category="etc">
+<div class="photocard nunu owned" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/cew-samhwa-1.png">
     <div class="details">
     <q class="albumtitle">samhwa</q>
@@ -3822,7 +3822,7 @@
     <q class="type">etc</q>
   </div>  
   </div>
-<div class="photocard nunu owned wtt" data-category="etc">
+<div class="photocard nunu owned" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/cew-samhwa-3.png">
     <div class="details">
     <q class="albumtitle">samhwa</q>
