--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -144,7 +144,7 @@
     </div>
   </div>
 
-  <div class="photocard rky summer iso" data-category="mini">
+  <div class="photocard rky summer owned" data-category="mini">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/summer-3.png" />
     <div class="details">
     <q class="albumtitle">summer vibes</q>
