--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -276,10 +276,10 @@
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/dream1-1.png" />
     <div class="details">
     <q class="albumtitle">dream 01</q>
+    <q class="status"> &check; </q>    <q class="status"> &#10148; </q>
     <q class="year">2017</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
-    <q class="status">otw</q>
     <q class="type">inclusion</q>
     </div>
   </div>
@@ -300,10 +300,10 @@
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/dream1-3.png" />
     <div class="details">
     <q class="albumtitle">dream 01</q>
+    <q class="status"> &check; </q> <q class="status"> &#10148; </q>
     <q class="year">2017</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
-    <q class="status">otw</q>
     <q class="type">inclusion</q>
     </div>
   </div>
