--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -296,7 +296,7 @@
     </div>
   </div>
   
-      <div class="photocard rky dream01 iso" data-category="mini">
+      <div class="photocard rky dream01 owned" data-category="mini">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/dream1-3.png" />
     <div class="details">
     <q class="albumtitle">dream 01</q>
@@ -329,14 +329,14 @@
     <q class="type">inclusion</q>
     </div>
   </div>
-      <div class="photocard rky dream01 iso" data-category="mini">
+      <div class="photocard rky dream01 owned" data-category="mini">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/dream1-6.png" />
     <div class="details">
     <q class="albumtitle">dream 01</q>
+    <q class="status"> &check; </q> <q class="status"> &#10148; </q>
     <q class="year">2017</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
-    <q class="status">otw</q>
     <q class="type">inclusion</q>
     </div>
   </div>
