--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -429,6 +429,50 @@
       <q class="type">inclusion</q>
   </div>
   </div>
+      <div class="photocard rky dream02 owned" data-category="mini">
+<img src="https://chikorakii.github.io/chikorakii/assets/pc/dream02-pola-1.png" />
+    <div class="details">
+    <q class="albumtitle">dream 02</q>
+    <q class="status"> &check; </q> <q class="status"> &#10148; </q>
+    <q class="year">2017</q>
+    <q class="group">astro</q>
+    <q class="member">rocky</q>
+      <q class="type">inclusion</q>
+  </div>
+  </div>
+      <div class="photocard rky dream02 iso" data-category="mini">
+<img src="https://chikorakii.github.io/chikorakii/assets/pc/dream02-pola-2.png" />
+    <div class="details">
+    <q class="albumtitle">dream 02</q>
+    <q class="status"> &cross; </q>
+    <q class="year">2017</q>
+    <q class="group">astro</q>
+    <q class="member">rocky</q>
+      <q class="type">inclusion</q>
+  </div>
+  </div>
+      <div class="photocard emzey jinu nunu binnie rky ddana dream02 iso" data-category="mini">
+<img src="https://chikorakii.github.io/chikorakii/assets/pc/dream02-pola-ot6-1.png" />
+    <div class="details">
+    <q class="albumtitle">dream 02</q>
+    <q class="status"> &cross; </q>
+    <q class="year">2017</q>
+    <q class="group">astro</q>
+    <q class="member">rocky</q>
+      <q class="type">inclusion</q>
+  </div>
+  </div>
+      <div class="photocard emzey jinu nunu binnie rky ddana dream02 iso" data-category="mini">
+<img src="https://chikorakii.github.io/chikorakii/assets/pc/dream02-pola-ot6-2.png" />
+    <div class="details">
+    <q class="albumtitle">dream 02</q>
+    <q class="status"> &cross; </q>
+    <q class="year">2017</q>
+    <q class="group">astro</q>
+    <q class="member">rocky</q>
+      <q class="type">inclusion</q>
+  </div>
+  </div>
       <div class="photocard rky riseup owned" data-category="mini">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/riseup-1.png" />
     <div class="details">
@@ -451,6 +495,17 @@
     <q class="member">rocky</q>
     <q class="type">inclusion</q>
     </div>
+  </div>
+      <div class="photocard rky riseup owned" data-category="mini">
+<img src="https://chikorakii.github.io/chikorakii/assets/pc/riseup-pola.png" />
+    <div class="details">
+    <q class="albumtitle">rise up</q>
+    <q class="status"> &check; </q> <q class="status"> &#10148; </q>
+    <q class="year">2018</q>
+    <q class="group">astro</q>
+    <q class="member">rocky</q>
+      <q class="type">inclusion</q>
+  </div>
   </div>
   <div class="photocard emzey alllight owned" data-category="full">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/mj-alllight-1.png">
