--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -2225,7 +2225,7 @@
 
     <!-- RESTORE ALBUM & POB -->
   
-    <div class="photocard rky owned" data-category="minisub">
+    <div class="photocard rky restore owned" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-stay-1.png" />
     <div class="details">
     <q class="albumtitle">restore</q>
@@ -2237,7 +2237,7 @@
     </div>
   </div>
 
-  <div class="photocard rky owned" data-category="minisub">
+  <div class="photocard rky restore owned" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-stay-2.png" />
     <div class="details">
     <q class="albumtitle">restore</q>
@@ -2248,7 +2248,7 @@
     <q class="type">inclusion</q>
     </div>
   </div>
-  <div class="photocard rky owned" data-category="minisub">
+  <div class="photocard rky restore owned" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-stay-3.png" />
     <div class="details">
     <q class="albumtitle">restore</q>
@@ -2259,7 +2259,7 @@
     <q class="type">inclusion</q>
     </div>
   </div>
-  <div class="photocard rky owned" data-category="minisub">
+  <div class="photocard rky restore owned" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-stay-4.png" />
     <div class="details">
     <q class="albumtitle">restore</q>
@@ -2270,7 +2270,7 @@
     <q class="type">inclusion</q>
     </div>
   </div>
-  <div class="photocard rky owned" data-category="minisub">
+  <div class="photocard rky restore owned" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-vay-1.png" />
     <div class="details">
     <q class="albumtitle">restore</q>
@@ -2281,7 +2281,7 @@
     <q class="type">inclusion</q>
     </div>
   </div>
-  <div class="photocard rky owned" data-category="minisub">
+  <div class="photocard rky restore owned" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-vay-2.png" />
     <div class="details">
     <q class="albumtitle">restore</q>
@@ -2292,7 +2292,7 @@
     <q class="type">inclusion</q>
     </div>
   </div>
-  <div class="photocard rky owned" data-category="minisub">
+  <div class="photocard rky restore owned" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-vay-3.png" />
     <div class="details">
     <q class="albumtitle">restore</q>
@@ -2303,7 +2303,7 @@
     <q class="type">inclusion</q>
     </div>
   </div>
-  <div class="photocard rky owned" data-category="minisub">
+  <div class="photocard rky restore owned" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-vay-4.png" />
     <div class="details">
     <q class="year">2022</q>
@@ -2314,7 +2314,7 @@
     </div>
   </div>
   
-      <div class="photocard rky iso" data-category="minisub">
+      <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmu-luckybehind-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2327,7 +2327,7 @@
     </div>
     </div>
 
-    <div class="photocard rky owned" data-category="minisub">
+    <div class="photocard rky restore owned" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmu-luckypola-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2339,7 +2339,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmu-luckyselca-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2351,7 +2351,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmu-luckyselca-2.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2363,7 +2363,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmu-luckyselca-3.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2375,7 +2375,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs1-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2387,7 +2387,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs1-2.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2399,7 +2399,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs2-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2411,7 +2411,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs2-2.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2423,7 +2423,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso priority" data-category="minisub">
+    <div class="photocard rky restore iso priority" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs3-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2435,7 +2435,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky priority iso" data-category="minisub">
+    <div class="photocard rky restore iso priority" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs3-2.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2447,7 +2447,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restpre iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs4-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2459,7 +2459,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs4-2.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2471,7 +2471,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs5-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2483,7 +2483,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs5-2.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2495,7 +2495,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky owned" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs6-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2507,7 +2507,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky owned" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs6-2.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2519,7 +2519,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs7-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2531,7 +2531,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs7-2.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2543,7 +2543,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs8-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2555,7 +2555,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky owned" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-appmufs8-2.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2567,7 +2567,7 @@
    <q class="company">apple music</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-clcne-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2579,7 +2579,7 @@
    <q class="company">clcne</q>
     </div>
     </div>
-    <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-dmc-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2592,7 +2592,7 @@
     </div>
     </div>
 
-      <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-everlinefs1-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2604,7 +2604,7 @@
    <q class="company">everline</q>
     </div>
     </div>
-      <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-everlinefs2-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2616,7 +2616,7 @@
    <q class="company">everline</q>
     </div>
     </div>
-      <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-everlinevc1-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2628,7 +2628,7 @@
    <q class="company">everline</q>
     </div>
     </div>
-      <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-everlinevc2-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2640,7 +2640,7 @@
    <q class="company">everline</q>
     </div>
     </div>
-      <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-jjmuze-specialgift.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2652,7 +2652,7 @@
    <q class="company">jj muze</q>
     </div>
     </div>
-      <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-jjmuzevc-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2664,7 +2664,7 @@
    <q class="company">jjmuze</q>
     </div>
     </div>
-      <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-joeun-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2676,7 +2676,7 @@
    <q class="company">joeun</q>
     </div>
     </div>
-      <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-makestarvs1-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2688,7 +2688,7 @@
    <q class="company">everline</q>
     </div>
     </div>
-      <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-makestarvc-2.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2700,7 +2700,7 @@
    <q class="company">makestar</q>
     </div>
     </div>
-      <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-makestarvc2-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2712,7 +2712,7 @@
    <q class="company">makestar</q>
     </div>
     </div>
-      <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-makestarvc2-2.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2724,7 +2724,7 @@
    <q class="company">makestar</q>
     </div>
     </div>
-      <div class="photocard jinu rky owned" data-category="minisub">
+      <div class="photocard jinu rky restire owned" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-mds-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2737,7 +2737,7 @@
    <q class="company"> md</q>
     </div>
     </div>
-      <div class="photocard jinu rky priority iso" data-category="minisub">
+      <div class="photocard jinu rky restire iso priority" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-mdv-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2750,7 +2750,7 @@
    <q class="company">md</q>
     </div>
     </div>
-      <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-mihwadang-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2762,8 +2762,8 @@
    <q class="company">mihwadang</q>
     </div>
     </div>
-      <div class="photocard rky iso" data-category="minisub">
-<img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-musickorea-1.png">
+     <div class="photocard rky restore iso" data-category="minisub">
+img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-musickorea-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
     <q class="status"> &cross; </q>
@@ -2774,8 +2774,8 @@
    <q class="company">music korea</q>
     </div>
     </div>
-      <div class="photocard rky iso" data-category="minisub">
-<img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama1-1.png">
+     <div class="photocard rky restore iso" data-category="minisub">
+img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama1-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
     <q class="status"> &cross; </q>
@@ -2786,7 +2786,7 @@
    <q class="company">withdrama</q>
     </div>
     </div>
-      <div class="photocard rky iso" data-category="minisub">
+    <div class="photocard rky restore iso" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama1-2.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2798,7 +2798,7 @@
    <q class="company">withdrama</q>
     </div>
     </div>
-      <div class="photocard rky iso priority" data-category="minisub">
+    <div class="photocard rky restore iso priority" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama2-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2810,7 +2810,7 @@
    <q class="company">withdrama</q>
     </div>
     </div>
-      <div class="photocard rky iso priority" data-category="minisub">
+    <div class="photocard rky restore iso priority" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama2-2.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2822,7 +2822,7 @@
    <q class="company">withdrama</q>
     </div>
     </div>
-      <div class="photocard rky owned" data-category="minisub">
+    <div class="photocard rky restore owned" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-yihziyu-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
