--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -2763,7 +2763,7 @@
     </div>
     </div>
      <div class="photocard rky restore iso" data-category="minisub">
-img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-musickorea-1.png">
+<img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-musickorea-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
     <q class="status"> &cross; </q>
@@ -2775,7 +2775,7 @@ img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-musickorea-1.
     </div>
     </div>
      <div class="photocard rky restore iso" data-category="minisub">
-img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama1-1.png">
+<img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama1-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
     <q class="status"> &cross; </q>
@@ -2985,7 +2985,7 @@ img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama1-1.
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-aroha1-1.png">
     <div class="details">
     <q class="albumtitle">AROHA 1</q>
-      <q class="status">&check; </q> <q class="status"> &#10148; </q>
+      <q class="status">&check; </q> 
     <q class="year">2016</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -2996,7 +2996,7 @@ img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama1-1.
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-aroha1-2.png">
     <div class="details">
     <q class="albumtitle">AROHA 1</q>
-      <q class="status">&check; </q> <q class="status"> &#10148; </q>
+      <q class="status">&check; </q> 
     <q class="year">2016</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3007,7 +3007,7 @@ img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama1-1.
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-aroha1-3.png">
     <div class="details">
     <q class="albumtitle">AROHA 1</q>
-      <q class="status">&check; </q> <q class="status"> &#10148; </q>
+      <q class="status">&check; </q> 
     <q class="year">2016</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3018,7 +3018,7 @@ img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama1-1.
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-aroha1-4.png">
     <div class="details">
     <q class="albumtitle">AROHA 1</q>
-       <q class="status">&check; </q> <q class="status"> &#10148; </q>
+       <q class="status">&check; </q>
     <q class="year">2016</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3029,7 +3029,7 @@ img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama1-1.
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-aroha1-5.png">
     <div class="details">
     <q class="albumtitle">AROHA 1</q>
-       <q class="status">&check; </q> <q class="status"> &#10148; </q>
+       <q class="status">&check; </q>
     <q class="year">2016</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3195,7 +3195,7 @@ img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama1-1.
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-astroad2-seoul-1.png">
     <div class="details">
     <q class="albumtitle">astroad seoul 2</q>
-      <q class="status">&check; </q> <q class="status"> &#10148; </q>
+      <q class="status">&check; </q> 
     <q class="year">2019</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3206,7 +3206,7 @@ img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama1-1.
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-astroad2-seoul-2.png">
     <div class="details">
     <q class="albumtitle">astroad seoul 2</q>
-      <q class="status">&check; </q> <q class="status"> &#10148; </q>
+      <q class="status">&check; </q> 
     <q class="year">2019</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3217,7 +3217,7 @@ img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama1-1.
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-astroad2-seoul-3.png">
     <div class="details">
     <q class="albumtitle">astroad seoul 2</q>
-      <q class="status">&check; </q> <q class="status"> &#10148; </q>
+      <q class="status">&check; </q> 
       <q class="year">2019</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3406,7 +3406,7 @@ img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama1-1.
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-makestar-1.png">
     <div class="details">
     <q class="albumtitle">one fine day</q>
-      <q class="status">&check; </q> <q class="status"> &#10148; </q>
+      <q class="status">&check; </q>
     <q class="year">2019</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
