--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -230,19 +230,18 @@
     <div class="details">
     <q class="albumtitle">winter dream</q>
     <q class="status"> &check; </q>
-    <q class="status"> &#10148; </q>
     <q class="year">2017</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
     <q class="type">inclusion</q>
     </div>
   </div>
-  <div class="photocard rky winter owned" data-category="mini">
+  <div class="photocard rky winter owned wtt" data-category="mini">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/winter-2.png" />
     <div class="details">
     <q class="albumtitle">winter dream</q>
     <q class="status"> &check; </q>
-    <q class="status"> &#10148; </q>
+    <q class="status"> &laquo; </q>
     <q class="year">2017</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -828,11 +827,12 @@
     <q class="type">inclusion</q>
     </div>
   </div>
-  <div class="photocard rky allyours owned" data-category="full">
+  <div class="photocard rky allyours owned wtt" data-category="full">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/allyours-6.png" />
     <div class="details">
     <q class="albumtitle">all yours</q>
     <q class="status">&check; </q>
+    <q class="status">&laquo; </q>
     <q class="year">2021</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -1564,11 +1564,12 @@
     <q class="type">inclusion</q>
     </div>
   </div>
-  <div class="photocard rky switchon owned" data-category="mini">
+  <div class="photocard rky switchon owned wtt" data-category="mini">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/switchon-8.png" />
     <div class="details">
     <q class="albumtitle">switch on</q>
-        <q class="status"> &check; </q> <q class="status"> &#10148; </q>
+        <q class="status"> &check; </q> 
+    <q class="status"> &laquo; </q>
     <q class="year">2021</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3737,7 +3738,7 @@
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-sg21-3.png">
     <div class="details">
     <q class="albumtitle">SG21</q>
-      <q class="status">&check;</q> <q class="status"> &#10148; </q>
+      <q class="status">&check;</q> 
     <q class="year">2021</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3748,7 +3749,7 @@
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-sg21-4.png">
     <div class="details">
     <q class="albumtitle">SG21</q>
-      <q class="status">&check;</q> <q class="status"> &#10148; </q>
+      <q class="status">&check;</q> 
     <q class="year">2018</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
