--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ I collect Rocky, my favorite ASTRO pairing is Binhyuk (with Myunghyuk a close se
         <div class="linkbox">
           <a href="/chikorakii/pages/buy-sell-trade.html">buy, sell, trade</a>
           <a href="https://forms.gle/Arg7DcpfVEDTWXe4A">roroha stickers</a>
+          <a href="https://forms.gle/Sj7JCCMAkTQfmfcW9">jinrock wonderwall GO </a>
           <a href="/chikorakii/pages/collection-albums.html">album collection</a>
           <a href="/chikorakii/pages/collection-pc.html">pc collection</a>
         </div>
